[gd_scene load_steps=4 format=2]

[ext_resource path="res://LevelCleared.gd" type="Script" id=1]
[ext_resource path="res://theme.tres" type="Theme" id=2]
[ext_resource path="res://UES.tres" type="DynamicFont" id=3]

[node name="Control" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 200.0
margin_top = 178.0
margin_right = 759.0
margin_bottom = 361.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 559.0
margin_bottom = 51.0
custom_fonts/font = ExtResource( 3 )
text = "LEVEL CLEARED"

[node name="Label2" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 55.0
margin_right = 559.0
margin_bottom = 84.0
text = "DIED 59 TIMES THIS LEVEL"
align = 1

[node name="Label3" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 88.0
margin_right = 559.0
margin_bottom = 117.0
text = "DIED 400 TIMES "
align = 1

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 121.0
margin_right = 559.0
margin_bottom = 150.0
text = "CONTINUE"

[node name="Button2" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 154.0
margin_right = 559.0
margin_bottom = 183.0
text = "QUIT TO MAIN MENU"

[connection signal="pressed" from="CenterContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Button2" to="." method="_on_Button2_pressed"]
